kubernetes/infrastructure/linkerd/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-smi
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
  labels:
    linkerd.io/extension: smi
    toolkit.fluxcd.io/tenant: sre-team
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
  labels:
    linkerd.io/extension: viz
    toolkit.fluxcd.io/tenant: sre-team
