kubernetes/infrastructure/linkerd/ingress.yaml
# https://linkerd.io/2.15/tasks/exposing-dashboard/#nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd-viz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkerd.${domain}
      secretName: tls-linkerd
  rules:
    - host: linkerd.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
